correct project file names and delete loadbalancer

--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/bootstrap.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/bootstrap.kubeconfig.j2
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Config
 clusters:
 - cluster:
-    certificate-authority: {{ pki_dir }}/ca.pem
-    server: https://{{ haproxy_backend_servers[0].address }}
+    certificate-authority: {{ pki_dir }}/ca.crt
+    server: https://192.168.56.11:6443
   name: kubernetes
 contexts:
 - context:
@@ -14,4 +14,4 @@ current-context: bootstrap@kubernetes
 users:
 - name: bootstrap
   user:
-    token: {{ bootstrap_token_id }}.{{ bootstrap_token_secret }}
+    token: "{{ bootstrap_token_id }}.{{ bootstrap_token_secret }}"
