--- a/k8s-installation/vagrant-ansible/ansible/roles/kubelet/templates/kubelet-config.yaml.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/kubelet/templates/kubelet-config.yaml.j2
@@ -12,3 +12,4 @@ clusterDNS:
   - "{{ service_cidr | ipaddr('10') }}"
 tlsCertFile: "{{ kubelet_pem }}"
 tlsPrivateKeyFile: "{{ kubelet_key_pem }}"
+cgroupDriver: systemd
