--- a/k8s-installation/vagrant-ansible/ansible/roles/hardening/templates/default-network-policy.yaml.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/hardening/templates/default-network-policy.yaml.j2
@@ -8,3 +8,16 @@ spec:
   policyTypes:
   - Ingress
   - Egress
+  egress:
+  - ports:
+    - protocol: UDP
+      port: 53
+    - protocol: TCP
+      port: 53
+    to:
+    - namespaceSelector:
+        matchLabels:
+          kubernetes.io/metadata.name: kube-system
+      podSelector:
+        matchLabels:
+          k8s-app: kube-dns
