update tasks files

--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/bootstrap.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/bootstrap.kubeconfig.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Config
 clusters:
 - cluster:
-    certificate-authority: {{ pki_dir }}/ca.crt
+    certificate-authority: {{ pki_dir }}/ca.pem
     server: https://192.168.56.11:6443
   name: kubernetes
 contexts:
