--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/admin.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/admin.kubeconfig.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Config
 clusters:
 - cluster:
-    certificate-authority: {{ pki_dir }}/ca.crt
+    certificate-authority: {{ pki_dir }}/ca.pem
     server: https://192.168.56.11:6443
   name: kubernetes
 contexts:
@@ -14,5 +14,5 @@ current-context: kubernetes-admin@kubernetes
 users:
 - name: kubernetes-admin
   user:
-    client-certificate: {{ pki_dir }}/admin.crt
-    client-key: {{ pki_dir }}/admin.key
+    client-certificate: {{ pki_dir }}/admin.pem
+    client-key: {{ pki_dir }}/admin-key.pem
