--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/kube-proxy.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/kube-proxy.kubeconfig.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Config
 clusters:
 - cluster:
-    certificate-authority: {{ pki_dir }}/ca.crt
+    certificate-authority: {{ pki_dir }}/ca.pem
     server: https://192.168.56.11:6443
   name: kubernetes
 contexts:
@@ -14,5 +14,5 @@ current-context: kube-proxy@kubernetes
 users:
 - name: kube-proxy
   user:
-    client-certificate: {{ pki_dir }}/kube-proxy.crt
-    client-key: {{ pki_dir }}/kube-proxy.key
+    client-certificate: {{ pki_dir }}/kube-proxy.pem
+    client-key: {{ pki_dir }}/kube-proxy-key.pem
