--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/kubelet.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/kubelet.kubeconfig.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Config
 clusters:
 - cluster:
-    certificate-authority: {{ pki_dir }}/ca.crt
+    certificate-authority: {{ pki_dir }}/ca.pem
     server: https://192.168.56.11:6443
   name: kubernetes
 contexts:
@@ -14,5 +14,5 @@ current-context: kubelet@kubernetes
 users:
 - name: kubelet
   user:
-    client-certificate: {{ pki_dir }}/kubelet.crt
-    client-key: {{ pki_dir }}/kubelet.key
+    client-certificate: {{ pki_dir }}/kubelet.pem
+    client-key: {{ pki_dir }}/kubelet-key.pem
