fix playbook templates

--- a/k8s-installation/vagrant-ansible/ansible/roles/control-plane/templates/kube-apiserver.service.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/control-plane/templates/kube-apiserver.service.j2
@@ -5,11 +5,13 @@ After=network.target
 
 [Service]
 ExecStart={{ apiserver_binary_dest }} \
+{% for arg in kube_apiserver_args %}
+    {{ arg }} \
+{% endfor %}
     --bind-address={{ kube_apiserver_bind_address }} \
     --secure-port={{ kube_apiserver_port }} \
     --tls-cert-file={{ pki_dir }}/{{ kubernetes_cert_file }} \
-    --tls-private-key-file={{ pki_dir }}/{{ kubernetes_key_file }} \
-    {% for arg in kube_apiserver_args %} {{ arg }} {% endfor %}
+    --tls-private-key-file={{ pki_dir }}/{{ kubernetes_key_file }}
 Restart=on-failure
 LimitNOFILE=65536
 
