--- a/k8s-installation/vagrant-ansible/ansible/roles/networking/templates/coredns-deployment.yaml.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/networking/templates/coredns-deployment.yaml.j2
@@ -15,7 +15,7 @@ spec:
     protocol: TCP
   selector:
     k8s-app: kube-dns
-  clusterIP: "{{ service_cidr | ipaddr('10') }}"
+  clusterIP: "{{ service_cidr | ipaddr('10') | ipaddr('address') }}"
 ---
 apiVersion: apps/v1
 kind: Deployment
