--- a/k8s-installation/vagrant-ansible/ansible/roles/control-plane/templates/kube-apiserver.yaml.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/control-plane/templates/kube-apiserver.yaml.j2
@@ -9,7 +9,7 @@ spec:
     image: k8s.gcr.io/kube-apiserver:v{{ kubernetes_version }}
     command:
     - kube-apiserver
-    - --advertise-address={{ ansible_host }}
+    - --advertise-address={{ kubernetes_public_address }}
     - --bind-address={{ kube_apiserver_bind_address }}
     - --secure-port={{ kube_apiserver_port }}
     {% for arg in kube_apiserver_args %}
