--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/admin.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/admin.kubeconfig.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Config
 clusters:
 - cluster:
-    certificate-authority: {{ pki_dir }}/ca.pem
+    certificate-authority-data: {{ lookup('file', certificate_dirs.base_path + '/ca.pem') | b64encode }}
     server: https://192.168.56.11:6443
   name: kubernetes
 contexts:
@@ -14,5 +14,5 @@ current-context: kubernetes-admin@kubernetes
 users:
 - name: kubernetes-admin
   user:
-    client-certificate: {{ pki_dir }}/admin.pem
-    client-key: {{ pki_dir }}/admin-key.pem
+    client-certificate-data: {{ lookup('file', certificate_dirs.base_path + '/admin.pem') | b64encode }}
+    client-key-data: {{ lookup('file', certificate_dirs.base_path + '/admin-key.pem') | b64encode }}
