--- a/k8s-installation/vagrant-ansible/ansible/roles/container-runtime/templates/config.toml.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/container-runtime/templates/config.toml.j2
@@ -1,4 +1,3 @@
-version = 2
 [plugins]
   [plugins."io.containerd.grpc.v1.cri"]
     sandbox_image = "registry.k8s.io/pause:3.9"
@@ -7,4 +6,9 @@ version = 2
         [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
           runtime_type = "io.containerd.runc.v2"
           [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc.options]
-            SystemdCgroup = true
+            SystemdCgroup = false
+    [plugins."io.containerd.grpc.v1.cri".cni]
+      bin_dir = "/opt/cni/bin"
+      conf_dir = "/etc/cni/net.d"
+      max_conf_num = 1
+      conf_template = ""
