--- a/k8s-installation/vagrant-ansible/ansible/roles/control-plane/templates/kube-apiserver.yaml.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/control-plane/templates/kube-apiserver.yaml.j2
@@ -3,29 +3,42 @@ kind: Pod
 metadata:
   name: kube-apiserver
   namespace: kube-system
+  labels:
+    component: kube-apiserver
+    tier: control-plane
 spec:
   containers:
   - name: kube-apiserver
-    image: k8s.gcr.io/kube-apiserver:v{{ kubernetes_version }}
+    image: registry.k8s.io/kube-apiserver:v{{ kubernetes_version }}
     command:
-    - kube-apiserver
-    - --advertise-address={{ kubernetes_public_address }}
-    - --bind-address={{ kube_apiserver_bind_address }}
-    - --secure-port={{ kube_apiserver_port }}
-    {% for arg in kube_apiserver_args %}
-    - {{ arg }}
-    {% endfor %}
+      - /usr/local/bin/kube-apiserver
+      {% for arg in kube_apiserver_args %}
+      - {{ arg }}
+      {% endfor %}
+      - --encryption-provider-config={{ config_dir }}/encryption-config.yaml
+      - --bind-address={{ kube_apiserver_bind_address }}
+      - --secure-port={{ kube_apiserver_port }}
     volumeMounts:
-    - name: pki
-      mountPath: {{ pki_dir }}
+    - name: kubernetes-config
+      mountPath: /etc/kubernetes/configs
       readOnly: true
-    - name: config
-      mountPath: {{ config_dir }}
+    - name: kubernetes-pki
+      mountPath: /var/lib/kubernetes
       readOnly: true
+    - name: etcd-pki
+      mountPath: /etc/etcd
+      readOnly: true
+  hostNetwork: true
   volumes:
-  - name: pki
-    hostPath:
-      path: {{ pki_dir }}
-  - name: config
+  - name: kubernetes-config
     hostPath:
       path: {{ config_dir }}
+      type: Directory
+  - name: kubernetes-pki
+    hostPath:
+      path: {{ pki_dir }}
+      type: Directory
+  - name: etcd-pki
+    hostPath:
+      path: {{ etcd_cert_dir }}
+      type: Directory
