--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/bootstrap.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/templates/bootstrap.kubeconfig.j2
@@ -3,7 +3,7 @@ kind: Config
 clusters:
 - cluster:
     certificate-authority: {{ pki_dir }}/ca.pem
-    server: https://192.168.56.11:6443
+    server: https://{{ kubernetes_public_address }}:{{ api_server_port }}
   name: kubernetes
 contexts:
 - context:
