--- a/k8s-installation/vagrant-ansible/ansible/roles/generate-artifacts/templates/kubelet.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/generate-artifacts/templates/kubelet.kubeconfig.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Config
 clusters:
 - cluster:
-    certificate-authority: {{ paths.artifacts.certs }}/ca.pem
+    certificate-authority: {{ paths.kubernetes.pki_dir }}/ca.pem
     server: https://{{ kubernetes_public_address }}:6443
   name: kubernetes
 contexts:
@@ -14,5 +14,6 @@ current-context: kubelet@kubernetes
 users:
 - name: kubelet
   user:
-    client-certificate: {{ paths.artifacts.certs }}/kubelet.pem
-    client-key: {{ paths.artifacts.certs }}/kubelet-key.pem
+    client-certificate: {{ paths.kubernetes.pki_dir }}/{{ kubelet_cert_file }}
+    client-key: {{ paths.kubernetes.pki_dir }}/{{ kubelet_key_file }}
+    
