--- a/k8s-installation/vagrant-ansible/ansible/roles/generate-artifacts/templates/kube-proxy.kubeconfig.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/generate-artifacts/templates/kube-proxy.kubeconfig.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Config
 clusters:
 - cluster:
-    certificate-authority: {{ paths.artifacts.certs }}/ca.pem
+    certificate-authority: {{ paths.kubernetes.pki_dir }}/ca.pem
     server: https://{{ kubernetes_public_address }}:6443
   name: kubernetes
 contexts:
@@ -14,5 +14,5 @@ current-context: kube-proxy@kubernetes
 users:
 - name: kube-proxy
   user:
-    client-certificate: {{ paths.artifacts.certs }}/kube-proxy.pem
-    client-key: {{ paths.artifacts.certs }}/kube-proxy-key.pem
+    client-certificate: {{ paths.kubernetes.pki_dir }}/kube-proxy.pem
+    client-key: {{ paths.kubernetes.pki_dir }}/kube-proxy-key.pem
