update playbooks and roles

--- a/k8s-installation/vagrant-ansible/ansible/roles/control-plane/templates/kube-controller-manager.yaml.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/control-plane/templates/kube-controller-manager.yaml.j2
@@ -16,6 +16,7 @@ spec:
       - {{ config_dir }}/kube-controller-manager.kubeconfig
       - --cluster-signing-cert-file={{ pki_dir }}/ca.pem
       - --cluster-signing-key-file={{ pki_dir }}/ca-key.pem
+      - --cluster-cidr={{ pod_network_cidr }}
       - --service-account-private-key-file={{ pki_dir }}/sa-key.pem
       - --root-ca-file={{ pki_dir }}/ca.pem
       - --service-cluster-ip-range={{ service_cidr }}
