--- a/k8s-installation/vagrant-ansible/ansible/roles/kubelet/templates/kubelet-config.yaml.j2
+++ b/k8s-installation/vagrant-ansible/ansible/roles/kubelet/templates/kubelet-config.yaml.j2
@@ -12,6 +12,7 @@ authorization:
 clusterDNS:
   - "{{ service_cidr | ipaddr('network') | ipaddr(10) | ipaddr('address') }}"
 clusterDomain: cluster.local
+clusterCIDR: {{ pod_network_cidr }}
 runtimeRequestTimeout: "15m"
 cgroupDriver: systemd
 containerRuntimeEndpoint: unix:///var/run/containerd/containerd.sock
